# docs/swagger.yaml
@@ -19,7 +19,7 @@ paths:
                     example: alive
       tags:
         - Health
-  /api/v1/translation/find/by/{uuid}:
+  /api/v1/translation/find/{uuid}:
     get:
       operationId: TranslationController_findOneByUUID
       parameters:
@@ -46,7 +46,7 @@ paths:
           description: Returns NOT_FOUND when no record found with the given uuid
       tags: &ref_0
         - Translation
-  /api/v1/translation/create/for/{uuid}:
+  /api/v1/translation/create/{uuid}:
     post:
       operationId: TranslationController_create
       parameters:
@@ -97,7 +97,7 @@ paths:
       tags: *ref_0
       security:
         - bearer: []
-  /api/v1/translation/update/by/{uuid}:
+  /api/v1/translation/update/{uuid}:
     patch:
       operationId: TranslationController_update
       parameters:
@@ -143,7 +143,7 @@ paths:
       tags: *ref_0
       security:
         - bearer: []
-  /api/v1/translation/delete/by/{uuid}:
+  /api/v1/translation/delete/{uuid}:
     delete:
       operationId: TranslationController_delete
       parameters:
@@ -183,7 +183,7 @@ paths:
       tags: *ref_0
       security:
         - bearer: []
-  /api/v1/dictionary/find/by/{uuid}:
+  /api/v1/dictionary/find/{uuid}:
     get:
       operationId: DictionaryController_findOneByUUID
       parameters:
@@ -250,7 +250,7 @@ paths:
       tags: *ref_1
       security:
         - bearer: []
-  /api/v1/dictionary/update/by/{uuid}:
+  /api/v1/dictionary/update/{uuid}:
     patch:
       operationId: DictionaryController_update
       parameters:
@@ -300,7 +300,7 @@ paths:
       tags: *ref_1
       security:
         - bearer: []
-  /api/v1/dictionary/delete/by/{uuid}:
+  /api/v1/dictionary/delete/{uuid}:
     delete:
       operationId: DictionaryController_delete
       parameters:
@@ -344,7 +344,7 @@ paths:
       tags: *ref_1
       security:
         - bearer: []
-  /api/v1/search/search/by:
+  /api/v1/search:
     get:
       operationId: SearchController_searchByKeyword
       parameters:
